# Dynamic-Gamma-Process-Models

./: README.md  pyproject.toml
src/dynagamma/: __init__.py  core.py
tests/: test_core.py
